feat(dto): new requests and responses